# Agano

./: .clang-tidy  .gitignore  CMakeLists.txt  example.cpp  setup.bat
agano/: CMakeLists.txt
agano/include/: agano.hpp  dummy.hpp
agano/src/: dummy.cpp
