cmake_minimum_required(VERSION 3.20)
project(agano_test VERSION 0.1.0)
set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-format-style=file;--use-color;-header-filter=.*")
add_subdirectory(agano)
add_executable(agano_test example.cpp)
target_link_libraries(agano_test PUBLIC agano)
target_include_directories(agano_test PUBLIC "${PROJECT_SOURCE_DIR}/agano/include" "${PROJECT_SOURCE_DIR}/agano/3rd_party/include")
set(ERROR_LIST "-Werror=return-type -Werror=unused-result")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wextra ${ERROR_LIST}")