cmake_minimum_required(VERSION 3.20)
project(agano VERSION 0.1.0)
set(AGANO_SRC_DIR "src")
set(AGANO_INCLUDE_DIR "include")
set(AGANO_3RD_PARTY_DIR "3rd_party")
include_directories(agano PUBLIC "${AGANO_INCLUDE_DIR}" "${AGANO_3RD_PARTY_DIR}/include")
add_library(agano "${AGANO_SRC_DIR}/dummy.cpp")
set(ERROR_LIST "-Werror=return-type -Werror=unused-result")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wextra ${ERROR_LIST}")